Added validation for domain entity if the user is not adding properties for nanomaterial entity and functionalizing entity